RESOLVED FIXED307537
[LBSE] Fix svg/custom/focus-ring.svg
https://bugs.webkit.org/show_bug.cgi?id=307537
Summary [LBSE] Fix svg/custom/focus-ring.svg
Rob Buis
Reported 2026-02-11 01:56:52 PST
Fix svg/custom/focus-ring.svg.
Attachments
Rob Buis
Comment 1 2026-02-11 03:21:32 PST
EWS
Comment 2 2026-02-13 05:56:13 PST
Committed 307467@main (db29dcc0c74d): <https://commits.webkit.org/307467@main> Reviewed commits have been landed. Closing PR #58396 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-13 05:57:14 PST
Karl Dubost
Comment 4 2026-02-13 06:06:58 PST
Karl Dubost
Comment 5 2026-02-13 06:49:09 PST
Ignore this last comment. It was a mistake from a rebase.
Note You need to log in before you can comment on or make changes to this bug.