[LBSE] Fix svg/custom/focus-ring.svg https://bugs.webkit.org/show_bug.cgi?id=307537

Reviewed by Nikolas Zimmermann.

Fix focus ring by ignoring additionalOffset when the container
itself is not transformed since repaintRectInLocalCoordinates
position will take any transforms of the children into account, unlike
using additionalOffset as position.

The remaining fix is avoiding clipping when painting the focus ring in the
text and image cases.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* LayoutTests/platform/mac-tahoe-wk2-pixel/svg/custom/focus-ring-expected.png:
* Source/WebCore/rendering/svg/RenderSVGContainer.cpp:
(WebCore::RenderSVGContainer::addFocusRingRects const):
* Source/WebCore/rendering/svg/RenderSVGContainer.h:
* Source/WebCore/rendering/svg/RenderSVGImage.cpp:
(WebCore::RenderSVGImage::paint):
* Source/WebCore/rendering/svg/RenderSVGText.cpp:
(WebCore::RenderSVGText::paint):

Canonical link: https://commits.webkit.org/307467@main